test/decl/protocol/conforms/fixit_stub_batch_mode.code
// RUN: %target-typecheck-verify-language -enable-batch-mode %S/Inputs/fixit_stub_batch_mode_helper.code

extension C: P {} // expected-error{{type 'C' does not conform to protocol 'P'}} expected-note {{add stubs for conformance}}
